buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0.16,6.2)', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
        classpath 'gradle.plugin.com.github.johnrengelman:shadow:7.1.2'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'java'

version = '1.4.0-forge+mc1.20.1'
group = 'com.github.tartaricacid'
archivesBaseName = 'netmusic'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'parchment', version: '2023.08.20-1.20.1'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            jvmArgs = [
                    "-XX:+IgnoreUnrecognizedVMOptions",
                    "-XX:+AllowEnhancedClassRedefinition",
                    // 开启 HTTP 请求日志，方便调试
                    "-Djdk.httpclient.HttpClient.log=requests,responses,headers,errors"
            ]
            workingDirectory project.file('run/client_a')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'fml.earlyprogresswindow', 'false'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                netmusic {
                    source sourceSets.main
                }
            }
        }

        client2 {
            parent minecraft.runs.client
            workingDirectory project.file('run/client_b')
            args '--username', 'tartaric_acid'
            mods {
                netmusic {
                    source sourceSets.main
                }
            }
        }

        server {
            jvmArgs "-XX:+AllowEnhancedClassRedefinition"
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'netmusic'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                netmusic {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dir "libs"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        // Patchouli
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "mezz.jei"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
        content {
            includeGroup "mezz.jei"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        name = "Curse Maven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url "https://maven.shedaniel.me/"
        content {
            includeGroup "me.shedaniel.cloth"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.20.1-47.1.0'

    // 必须的音频解码库
    minecraftLibrary 'com.googlecode.soundlibs:mp3spi:1.9.5.4'
    minecraftLibrary 'libs:javasound-aac:0.9.6'
    minecraftLibrary 'libs:jflac-codec-1.5.3:SNAPSHOT'

    // JEI
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.0.0.12")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.0.0.12")
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.20.0.106")

    // Cloth Config
    implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:11.1.106")

    // 物理声效重制版
    runtimeOnly fg.deobf("curse.maven:sound-physics-remastered-535489:5525256")

    // 精妙背包
    implementation fg.deobf("maven.modrinth:sophisticated-core:1.20.1-1.3.2.1468")
    implementation fg.deobf("maven.modrinth:sophisticated-backpacks:1.20.1-3.24.21.1515")

    // 女仆模组
    implementation fg.deobf("maven.modrinth:touhou-little-maid:1.5.2-forge+mc1.20.1")

    // IPN
    runtimeOnly "curse.maven:kotlin-for-forge-351264:4983659"
    runtimeOnly fg.deobf("curse.maven:libipn-679177:4870127")
    implementation fg.deobf("curse.maven:inventory-profiles-next-495267:4813458")

    // Curios
    runtimeOnly fg.deobf("maven.modrinth:curios:5.14.1+1.20.1-forge")
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [mod_version: version]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

shadowJar {
    dependencies {
        include(dependency("com.googlecode.soundlibs:mp3spi:1.9.5.4"))
        include(dependency("com.googlecode.soundlibs:jlayer:1.0.1.4"))
        include(dependency("com.googlecode.soundlibs:tritonus-share:0.3.7.4"))
        include(dependency("libs:jflac-codec-1.5.3:SNAPSHOT"))
        include(dependency("libs:javasound-aac:0.9.6"))
    }

    relocate 'javazoom.jl', 'com.github.tartaricacid.netmusic.soundlibs.javazoom.jl'
    relocate 'javazoom.spi', 'com.github.tartaricacid.netmusic.soundlibs.javazoom.spi'
    relocate 'org.tritonus', 'com.github.tartaricacid.netmusic.soundlibs.org.tritonus'
    relocate 'org.jflac', 'com.github.tartaricacid.netmusic.soundlibs.org.jflac'
    relocate 'net.sourceforge.jaad', 'com.github.tartaricacid.netmusic.soundlibs.net.sourceforge.jaad'

    // 排除不需要的依赖项和资源
    exclude 'META-INF/maven/**/*'
    exclude 'META-INF/versions/**/*'
    // 这个版权许可都已经手动添加进 licenses 里了
    exclude 'META-INF/LICENSE'

    mergeServiceFiles()
}

reobf {
    shadowJar {}
}

task shadowJarPublish(type: Jar) {
    dependsOn reobfShadowJar
    archiveClassifier = "all"
    from zipTree("${project.projectDir}/build/reobfShadowJar/output.jar")
}

assemble.dependsOn shadowJar
tasks.build.dependsOn shadowJarPublish

java {
    // 编译源码文件，方便发布 maven
    withSourcesJar()
}

jar {
    manifest {
        attributes([
                "Implementation-Title"  : project.name,
                "Implementation-Version": "${version}"
        ])
    }
}
